# wild-guide

./: README.md
design/: wild_guide.FCStd
wildguide_control/: CMakeLists.txt  package.xml
wildguide_core/: CMakeLists.txt  README.md  package.xml
wildguide_core/include/wildguide_core/: visibility_control.h  weather_filter.hpp  weather_filter_component.hpp  wildguide_core.hpp
wildguide_core/src/: weather_filter.cpp  weather_filter_component.cpp  weather_filter_node.cpp  wildguide_core.cpp
wildguide_description/: CMakeLists.txt  README.md  package.xml
wildguide_description/launch/: display.launch.py
wildguide_description/meshes/: base_link.stl  camera.stl  gps.stl  velodyne.stl  wheel.stl
wildguide_description/rviz/: display.rviz
wildguide_description/urdf/: wildguide.urdf
wildguide_interface/: CMakeLists.txt  package.xml
wildguide_localization/: CMakeLists.txt  package.xml
wildguide_localization/include/wildguide_localization/: location.hpp
wildguide_navigation/: CMakeLists.txt  package.xml
wildguide_perception/: CMakeLists.txt  package.xml
wildguide_simulation/: CMakeLists.txt  package.xml
wildguide_simulation/launch/: gazebo.launch.py
wildguide_simulation/worlds/: empty_world.world
